[tool.poetry]
authors = ["Bradley Shawyer <21098019+bradleyess@users.noreply.github.com>"]
maintainers = []
description = "A Python starter template. Uses Poetry for dependency and virtualenv management & Docker for virtualization and development."
name = "python-starter"
packages = [{include = "python_starter"}]
readme = "README.md"
version = "0.1.0"
keywords = []

[tool.poetry.dependencies]
python = "^3.10"
loguru = "^0.6"

[tool.poetry.group.dev.dependencies]
sqlfluff = "^2.1.2"
black = "^23.3.0"
mypy = "^1.1.1"
pytest = "^7.1.2"
pytest-cov = "^3.0"
ruff = "^0.0.261"
vulture = "^2.7"
bandit = "^1.7.5"


[build-system]
build-backend = "poetry.core.masonry.api"
requires = ["poetry-core>=1.4.2"]

# Ruff Linting
[tool.ruff]
# Enable pycodestyle (`E`) and Pyflakes (`F`) codes by default.
select = ["E", "F"]
ignore = []

# Allow autofix for all enabled rules (when `--fix`) is provided.
fixable = ["A", "B", "D", "E", "F", "G", "I", "N", "Q", "S", "W", "ANN", "ARG", "BLE", "COM", "DJ", "DTZ", "EM", "ERA", "EXE", "FBT", "ICN", "INP", "ISC", "NPY", "PD", "PGH", "PIE", "PL", "PT", "PTH", "PYI", "RET", "RSE", "RUF", "SIM", "SLF", "TCH", "TID", "TRY", "UP", "YTT"]

# Unfixable errors can be added here...
unfixable = []

# Exclude a variety of commonly ignored directories.
exclude = [
    ".bzr",
    ".direnv",
    ".eggs",
    ".git",
    ".hg",
    ".mypy_cache",
    ".nox",
    ".pants.d",
    ".pytype",
    ".ruff_cache",
    ".svn",
    ".tox",
    ".venv",
    "__pypackages__",
    "_build",
    "buck-out",
    "build",
    "dist",
    "node_modules",
    "venv",
]

# Same as Black.
line-length = 100
# Allow unused variables when underscore-prefixed.
dummy-variable-rgx = "^(_+|(_+[a-zA-Z0-9_]*[a-zA-Z0-9]+?))$"
# Assume Python 3.10.
target-version = "py311"

[tool.ruff.mccabe]
max-complexity = 10